📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11790,5 +11790,69 @@
         "published": "Sat, 13 Dec 2025 08:30:42 GMT",
         "source": "Latest news",
         "summary": "There are some situations where you might want to temporarily disable Windows' built-in security tool. I'll show you how to do it safely."
+    },
+    {
+        "id": "https://www.wired.com/story/the-instagram-fueled-boom-in-copycat-vintage-car-body-shells/",
+        "title": "The Instagram-Fueled Boom in Copycat Vintage Car-Body Shells",
+        "link": "https://www.wired.com/story/the-instagram-fueled-boom-in-copycat-vintage-car-body-shells/",
+        "published": "Sat, 13 Dec 2025 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Instagram is awash with Asian firms showing how they can remake old Broncos, Defenders, and other whole classic cars\u2014better and much cheaper than in the US."
+    },
+    {
+        "id": "https://mashable.com/article/best-new-lego-sets-dec-2025",
+        "title": "The 30 best new Lego sets run the gamut from Game Boy to The Goonies and the U.S.S. Enterprise",
+        "link": "https://mashable.com/article/best-new-lego-sets-dec-2025",
+        "published": "Sat, 13 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "From the new Lego U.S.S. Enterprise to a tropical aquarium, these are the best new releases available to order."
+    },
+    {
+        "id": "https://mashable.com/article/nasa-parker-solar-probe-sun-matches-record-speed-closest-approach",
+        "title": "A NASA spacecraft is piercing the suns scorching atmosphere right now",
+        "link": "https://mashable.com/article/nasa-parker-solar-probe-sun-matches-record-speed-closest-approach",
+        "published": "Sat, 13 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "NASA's Parker Solar Probe has repeated its record-breaking speed and flyby distance, entering perihelion for its orbit around the sun on Dec. 13, 2025."
+    },
+    {
+        "id": "https://mashable.com/article/australian-open-2026-live-stream-for-free-clone",
+        "title": "How to watch the 2026 Australian Open online for free",
+        "link": "https://mashable.com/article/australian-open-2026-live-stream-for-free-clone",
+        "published": "Sat, 13 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch Australian Open for free. Live stream the 2026 Australian Open for free from anywhere in the world."
+    },
+    {
+        "id": "https://mashable.com/article/thunder-spurs-nba-cup-2025-live-stream-for-free",
+        "title": "How to watch Thunder vs. Spurs online for free",
+        "link": "https://mashable.com/article/thunder-spurs-nba-cup-2025-live-stream-for-free",
+        "published": "Sat, 13 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch NBA for free. Live stream Oklahoma City Thunder vs. San Antonio Spurs in the NBA Cup for free from anywhere in the world."
+    },
+    {
+        "id": "https://mashable.com/article/magic-knicks-nba-cup-2025-live-stream-for-free",
+        "title": "How to watch Magic vs. Knicks online for free",
+        "link": "https://mashable.com/article/magic-knicks-nba-cup-2025-live-stream-for-free",
+        "published": "Sat, 13 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch NBA for free. Live stream Orlando Magic vs. New York Knicks in the NBA Cup for free from anywhere in the world."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-ipad-air-case/",
+        "title": "The best iPad Air cases of 2025: Expert tested",
+        "link": "https://www.zdnet.com/article/best-ipad-air-case/",
+        "published": "Sat, 13 Dec 2025 10:00:46 GMT",
+        "source": "Latest news",
+        "summary": "If you gift an iPad this holiday season, don't forget a case. Discover our favorite iPad Air cases from brands including Apple, Burga, and Logitech."
+    },
+    {
+        "id": "https://petapixel.com/2025/12/06/this-photographer-built-an-awesome-medium-format-rangefinder-and-so-can-you/",
+        "title": "Photographer Built a Medium-Format Rangefinder, and So Can You",
+        "link": "https://petapixel.com/2025/12/06/this-photographer-built-an-awesome-medium-format-rangefinder-and-so-can-you/",
+        "published": "Sat, 06 Dec 2025 22:29:29 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46177160\">Comments</a>"
     }
 ]
