📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11854,5 +11854,45 @@
         "published": "Sat, 06 Dec 2025 22:29:29 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46177160\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/gear-news-of-the-week-android-gets-emergency-live-video-and-the-pixel-watch-4-supports-gestures/",
+        "title": "Gear News of the Week: Android Gets Emergency Live Video, and the Pixel Watch 4 Supports Gestures",
+        "link": "https://www.wired.com/story/gear-news-of-the-week-android-gets-emergency-live-video-and-the-pixel-watch-4-supports-gestures/",
+        "published": "Sat, 13 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Plus: Apple Fitness+ expands to new markets, it\u2019s even easier to add photos to Aura\u2019s digital frames, and the new Nocs speakers go heavy metal."
+    },
+    {
+        "id": "https://www.wired.com/story/how-to-use-smart-lighting/",
+        "title": "How to Use Smart Lighting Around the Home: Reviewer Recommendations",
+        "link": "https://www.wired.com/story/how-to-use-smart-lighting/",
+        "published": "Sat, 13 Dec 2025 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "I\u2019ve been reviewing smart lighting for years. Here are tips on how to prep, what to choose, and the smart lights that work best in each room."
+    },
+    {
+        "id": "https://gizmodo.com/the-worst-ways-rfk-jr-has-harmed-public-health-this-year-2000698509",
+        "title": "The Worst Ways RFK Jr. Has Harmed Public Health This Year",
+        "link": "https://gizmodo.com/the-worst-ways-rfk-jr-has-harmed-public-health-this-year-2000698509",
+        "published": "Sat, 13 Dec 2025 11:00:22 +0000",
+        "source": "Gizmodo",
+        "summary": "The return of measles, weakening vaccines, and the complete destruction of the CDC are just a few of Kennedy's ignoble accomplishments in 2025."
+    },
+    {
+        "id": "https://mashable.com/article/shark-facialpro-glow-review-first-impressions",
+        "title": "Shark FacialPro Glow review: The pore de-clogging is legit, but it may not be right for every skin type",
+        "link": "https://mashable.com/article/shark-facialpro-glow-review-first-impressions",
+        "published": "Sat, 13 Dec 2025 10:30:00 +0000",
+        "source": "Mashable",
+        "summary": "The Shark FacialPro Glow isn't all hype. It works on sebaceous filaments and makes skin softer. But I found one caveat after 1.5 months."
+    },
+    {
+        "id": "https://mashable.com/article/shark-turboblade-cool-heat-review",
+        "title": "The Shark TurboBlade Cool + Heat bladeless tower fan and heater is out to end the thermostat wars",
+        "link": "https://mashable.com/article/shark-turboblade-cool-heat-review",
+        "published": "Sat, 13 Dec 2025 10:07:08 +0000",
+        "source": "Mashable",
+        "summary": "The Shark TurboBlade Cool + Heat bladeless tower fan does a great job and heating and cooling medium to small areas."
     }
 ]
