📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11894,5 +11894,77 @@
         "published": "Sat, 13 Dec 2025 10:07:08 +0000",
         "source": "Mashable",
         "summary": "The Shark TurboBlade Cool + Heat bladeless tower fan does a great job and heating and cooling medium to small areas."
+    },
+    {
+        "id": "https://www.wired.com/story/google-data-centers-will-bring-nuclear-power-back-to-tornado-country/",
+        "title": "Google Data Centers Are Returning Nuclear Power to Tornado Country",
+        "link": "https://www.wired.com/story/google-data-centers-will-bring-nuclear-power-back-to-tornado-country/",
+        "published": "Sat, 13 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "A destructive storm in 2020 prematurely shut down Iowa\u2019s only nuclear plant. With Google\u2019s plans to reopen it to power nearby data centers, will extreme weather threaten the reactor\u2019s safety?"
+    },
+    {
+        "id": "https://www.wired.com/story/best-shows-amazon-prime/",
+        "title": "The 24 Best Shows on Amazon Prime, WIRED\u2019s Picks (December 2025)",
+        "link": "https://www.wired.com/story/best-shows-amazon-prime/",
+        "published": "Sat, 13 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Bat-Fam, The Girlfriend, and The Mighty Nein are just a few of the shows you should be watching on Amazon Prime Video this week."
+    },
+    {
+        "id": "https://www.wired.com/review/velotric-discover-2/",
+        "title": "Velotric Discover 2 Electric Bike Review: Versatile and Powerful",
+        "link": "https://www.wired.com/review/velotric-discover-2/",
+        "published": "Sat, 13 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "This laid-back ride comes with an almost bewildering array of power modes and riding styles. Just make sure you obey the law."
+    },
+    {
+        "id": "https://www.wired.com/story/security-news-this-week-ai-toys-for-kids-talk-about-sex-drugs-and-chinese-propaganda/",
+        "title": "AI Toys for Kids Talk About Sex, Drugs, and Chinese Propaganda",
+        "link": "https://www.wired.com/story/security-news-this-week-ai-toys-for-kids-talk-about-sex-drugs-and-chinese-propaganda/",
+        "published": "Sat, 13 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Plus: Travelers to the US may have to hand over five years of social media history, South Korean CEOs are resigning due to cyberattacks, and more."
+    },
+    {
+        "id": "https://gizmodo.com/how-governments-turn-the-internet-into-a-weapon-2000699263",
+        "title": "How Governments Turn the Internet Into a Weapon",
+        "link": "https://gizmodo.com/how-governments-turn-the-internet-into-a-weapon-2000699263",
+        "published": "Sat, 13 Dec 2025 12:00:17 +0000",
+        "source": "Gizmodo",
+        "summary": "From protests to elections, governments are increasingly pulling the internet plug on entire populations. Connectivity is slowly becoming a tool of control, not a guarantee."
+    },
+    {
+        "id": "https://mashable.com/roundup/best-laptops-2025",
+        "title": "We tested over 30 laptops in 2025. Here are the 11 best for every budget and use case.",
+        "link": "https://mashable.com/roundup/best-laptops-2025",
+        "published": "Sat, 13 Dec 2025 11:00:00 +0000",
+        "source": "Mashable",
+        "summary": "We tested dozens of laptops to find the best for every budget. That includes the M4 Apple MacBook Air and Microsoft Surface Laptop 7."
+    },
+    {
+        "id": "https://www.zdnet.com/article/tech-gadgets-i-couldnt-live-without-2025/",
+        "title": "The 9 tech gadgets I couldn't live without in 2025 (and they don't include AirTags)",
+        "link": "https://www.zdnet.com/article/tech-gadgets-i-couldnt-live-without-2025/",
+        "published": "Sat, 13 Dec 2025 12:01:43 GMT",
+        "source": "Latest news",
+        "summary": "These are the gadgets and gizmos that have had the biggest impact on my life this year."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-use-ai-to-bring-art-to-life/",
+        "title": "How I use AI to bring my kid's art to life - and why it's a fun learning opportunity",
+        "link": "https://www.zdnet.com/article/how-to-use-ai-to-bring-art-to-life/",
+        "published": "Sat, 13 Dec 2025 12:01:25 GMT",
+        "source": "Latest news",
+        "summary": "I want to introduce my kid to AI tools like ChatGPT, Gemini, and Sora, but without turning it into a shortcut or replacing her imagination."
+    },
+    {
+        "id": "https://github.com/yogananda-muthaiah/SAP-CPQ/tree/main/Integrations/CAD-2d-3d",
+        "title": "Bookmark for CAD/2d/3D Useful links",
+        "link": "https://github.com/yogananda-muthaiah/SAP-CPQ/tree/main/Integrations/CAD-2d-3d",
+        "published": "Sat, 13 Dec 2025 11:16:45 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46253763\">Comments</a>"
     }
 ]
