📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12070,5 +12070,45 @@
         "published": "Sat, 13 Dec 2025 12:29:19 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46254087\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/843455/mechanical-keyboard-nyphy-favorite",
+        "title": "The best thing I bought this year: a portable mechanical keyboard",
+        "link": "https://www.theverge.com/gadgets/843455/mechanical-keyboard-nyphy-favorite",
+        "published": "2025-12-13T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "As a writer, I take the tools of my trade relatively seriously. I\u2019m not crazy enough to drop $3,600 on a keyboard, but I also find typing on a MacBook for extended periods of time deeply unsatisfying \u2014 and distracting. So this spring, I started looking into distraction-free writing setups, which included an e-reader / [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/gift-ideas-for-people-who-are-perpetually-cold-2025/",
+        "title": "18 Gifts for People Who Are Perpetually Cold (2025)",
+        "link": "https://www.wired.com/gallery/gift-ideas-for-people-who-are-perpetually-cold-2025/",
+        "published": "Sat, 13 Dec 2025 14:09:00 +0000",
+        "source": "WIRED",
+        "summary": "From a backyard hot tub to the warmest slippers, these picks will make your loved ones feel warm and fuzzy\u2014inside and out."
+    },
+    {
+        "id": "https://gizmodo.com/tsa-sending-info-on-domestic-travelers-to-ice-for-deportation-arrests-2000699352",
+        "title": "TSA Sending Info on Domestic Travelers to ICE for Deportation Arrests",
+        "link": "https://gizmodo.com/tsa-sending-info-on-domestic-travelers-to-ice-for-deportation-arrests-2000699352",
+        "published": "Sat, 13 Dec 2025 15:05:53 +0000",
+        "source": "Gizmodo",
+        "summary": "The program has been running since March but we're only learning about it now."
+    },
+    {
+        "id": "https://mashable.com/article/nba-live-stream-for-free",
+        "title": "How to watch NBA live streams online for free",
+        "link": "https://mashable.com/article/nba-live-stream-for-free",
+        "published": "Sat, 13 Dec 2025 14:14:06 +0000",
+        "source": "Mashable",
+        "summary": "How to watch NBA for free. Live stream NBA games for free from anywhere in the world."
+    },
+    {
+        "id": "https://www.wbur.org/hereandnow/2025/12/09/nuclear-power-ai",
+        "title": "AI is bringing old nuclear plants out of retirement",
+        "link": "https://www.wbur.org/hereandnow/2025/12/09/nuclear-power-ai",
+        "published": "Sat, 13 Dec 2025 13:08:36 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46254276\">Comments</a>"
     }
 ]
