📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12110,5 +12110,37 @@
         "published": "Sat, 13 Dec 2025 13:08:36 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46254276\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/tech/840599/posha-robot-chef-review",
+        "title": "This $1,500 robot cooks dinner while I work",
+        "link": "https://www.theverge.com/tech/840599/posha-robot-chef-review",
+        "published": "2025-12-13T11:00:00-05:00",
+        "source": "The Verge",
+        "summary": "As I'm sitting in my office writing this review, delicious, cheesy, garlicky scents are wafting up the stairs. I can hear whizzing and whirring, and the occasional clunk, as a robot chef in my kitchen is making macaroni and cheese. Its app tells me there are three minutes left in the process, and based on [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/844093/nex-playground-google-pixel-buds-2a-deal-sale",
+        "title": "The Nex Playground and Pixel Buds 2A top our list of the best deals this week",
+        "link": "https://www.theverge.com/gadgets/844093/nex-playground-google-pixel-buds-2a-deal-sale",
+        "published": "2025-12-13T10:16:08-05:00",
+        "source": "The Verge",
+        "summary": "The Nex Playground is apparently one of the hottest consoles this holiday season thanks to its kid-friendly games and fun, motion-controlled gameplay. And now through December 14th, the cube-shaped console is on sale for its Black Friday low of around $199 ($50 off) at Amazon. There are some other great deals still available you might [&#8230;]"
+    },
+    {
+        "id": "https://gizmodo.com/our-first-look-at-avengers-doomsday-might-be-split-into-four-parts-2000699272",
+        "title": "Our First Look at \u2018Avengers: Doomsday\u2019 Might Be Split Into Four Parts",
+        "link": "https://gizmodo.com/our-first-look-at-avengers-doomsday-might-be-split-into-four-parts-2000699272",
+        "published": "Sat, 13 Dec 2025 15:30:33 +0000",
+        "source": "Gizmodo",
+        "summary": "Want to know what to expect from 'Avengers: Doomsday'? You'll be waiting in the theater or from your home for a month-long rollout."
+    },
+    {
+        "id": "https://old.reddit.com/r/mildlyinfuriating/comments/1plldqo/my_lg_tvs_new_software_update_installed_microsoft/",
+        "title": "LG TV's new software update installed MS Copilot, which cannot be deleted",
+        "link": "https://old.reddit.com/r/mildlyinfuriating/comments/1plldqo/my_lg_tvs_new_software_update_installed_microsoft/",
+        "published": "Sat, 13 Dec 2025 15:41:24 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46255335\">Comments</a>"
     }
 ]
