📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12182,5 +12182,53 @@
         "published": "Wed, 10 Dec 2025 21:08:41 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46223882\">Comments</a>"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/nintendo/crkds-nitro-deck-2-works-for-both-the-nintendo-switch-and-switch-2-173920127.html?src=rss",
+        "title": "CRKD's Nitro Deck 2 works for both the Nintendo Switch and Switch 2",
+        "link": "https://www.engadget.com/gaming/nintendo/crkds-nitro-deck-2-works-for-both-the-nintendo-switch-and-switch-2-173920127.html?src=rss",
+        "published": "Sat, 13 Dec 2025 17:39:20 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Even though Nintendo made some serious upgrades with the <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/gaming/nintendo/the-switch-2s-best-feature-is-its-satisfying-joy-con-2-thunk-150031872.html\">Joy-Con 2</a>, you still might end up ditching them for CRKD's Nitro Deck 2. After winning over Nintendo Switch owners with its first <a class=\"no-affiliate-link\" href=\"https://www.engadget.com/crkd-nitro-deck-review-the-switch-has-never-felt-this-good-130041763.html\">Nitro Deck</a>, CR"
+    },
+    {
+        "id": "https://gizmodo.com/cyberpunk-2077-proved-a-game-can-change-itself-but-not-its-history-2000689506",
+        "title": "\u2018Cyberpunk 2077\u2019 Proved a Game Can Change Itself, But Not Its History",
+        "link": "https://gizmodo.com/cyberpunk-2077-proved-a-game-can-change-itself-but-not-its-history-2000689506",
+        "published": "Sat, 13 Dec 2025 17:25:31 +0000",
+        "source": "Gizmodo",
+        "summary": "It ain't a thing of beauty, but 'Cyberpunk 2077' eventually became a good game that knows how it got there."
+    },
+    {
+        "id": "https://blog.tymscar.com/posts/gleamaoc2025/",
+        "title": "I tried Gleam for Advent of Code",
+        "link": "https://blog.tymscar.com/posts/gleamaoc2025/",
+        "published": "Sat, 13 Dec 2025 17:00:14 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46255991\">Comments</a>"
+    },
+    {
+        "id": "https://bluuewhale.github.io/posts/building-a-fast-and-memory-efficient-hash-table-in-java-by-borrowing-the-best-ideas/",
+        "title": "Fast, Memory-Efficient Hash Table in Java: Borrowing the Best Ideas",
+        "link": "https://bluuewhale.github.io/posts/building-a-fast-and-memory-efficient-hash-table-in-java-by-borrowing-the-best-ideas/",
+        "published": "Sat, 13 Dec 2025 17:41:32 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46256325\">Comments</a>"
+    },
+    {
+        "id": "https://louplummer.lol/nice-stranger/",
+        "title": "What is the nicest thing a stranger has ever done for you?",
+        "link": "https://louplummer.lol/nice-stranger/",
+        "published": "Thu, 11 Dec 2025 19:28:40 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46236001\">Comments</a>"
+    },
+    {
+        "id": "https://wiki.bbchallenge.org/wiki/Cryptids",
+        "title": "Cryptids",
+        "link": "https://wiki.bbchallenge.org/wiki/Cryptids",
+        "published": "Sat, 06 Dec 2025 11:48:45 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46172586\">Comments</a>"
     }
 ]
