📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -12230,5 +12230,61 @@
         "published": "Sat, 06 Dec 2025 11:48:45 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46172586\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/news/844380/nex-playground-outselling-the-xbox",
+        "title": "A Kinect for kids is outselling Xbox to become the hot console this holiday",
+        "link": "https://www.theverge.com/news/844380/nex-playground-outselling-the-xbox",
+        "published": "2025-12-13T13:17:20-05:00",
+        "source": "The Verge",
+        "summary": "It's a small sample size, likely driven by Black Friday discounts and temporary virality, but the Nex Playground has gone from little-known console curiosity to best-seller. It's now on track to quadruple its sales from last year. According to research firm Circana, the Playground was the second best-selling console in the US for the week [&#8230;]"
+    },
+    {
+        "id": "https://www.engadget.com/mobile/ios-262-is-here-with-another-liquid-glass-tweak-new-podcasts-features-and-more-181020133.html?src=rss",
+        "title": "iOS 26.2 is here with another Liquid Glass tweak, new Podcasts features and more",
+        "link": "https://www.engadget.com/mobile/ios-262-is-here-with-another-liquid-glass-tweak-new-podcasts-features-and-more-181020133.html?src=rss",
+        "published": "Sat, 13 Dec 2025 18:10:20 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Apple has released <a class=\"no-affiliate-link\" href=\"https://support.apple.com/en-us/123075\">iOS 26.2</a>, bringing a number of new convenience features and security updates. The update includes auto-generated chapters for episodes in the Podcasts app, the option to make AirDrop more secure using verification codes, alarms for Reminders and more. It also introduces new controls for how Liquid Glass appears on the Lock Screen, adding a slider to adjust the transparency level. The drop also in"
+    },
+    {
+        "id": "https://gizmodo.com/google-has-taken-down-ai-generated-content-following-disneys-cease-and-desist-2000698254",
+        "title": "Google Has Taken Down AI-Generated Content Following Disney\u2019s Cease and Desist",
+        "link": "https://gizmodo.com/google-has-taken-down-ai-generated-content-following-disneys-cease-and-desist-2000698254",
+        "published": "Sat, 13 Dec 2025 19:02:54 +0000",
+        "source": "Gizmodo",
+        "summary": "Disney has a licensing deal with OpenAI now, by the way."
+    },
+    {
+        "id": "https://mashable.com/article/how-to-watch-the-first-six-minutes-of-the-odyssey-christopher-nolan",
+        "title": "The prologue of Christopher Nolans The Odyssey is now in theaters. Heres how to watch.",
+        "link": "https://mashable.com/article/how-to-watch-the-first-six-minutes-of-the-odyssey-christopher-nolan",
+        "published": "Sat, 13 Dec 2025 18:21:34 +0000",
+        "source": "Mashable",
+        "summary": "Christopher Nolan's \"The Odyssey\" hits theaters in July, but you can watch the first six minutes in IMAX now. Here's how."
+    },
+    {
+        "id": "https://mashable.com/roundup/best-dating-apps-for-men",
+        "title": "The 9 best dating apps for men who are tired of being alone",
+        "link": "https://mashable.com/roundup/best-dating-apps-for-men",
+        "published": "Sat, 13 Dec 2025 18:13:42 +0000",
+        "source": "Mashable",
+        "summary": "Which dating apps for men actually work? We reviewed the top options for every type of guy, including Tinder, Hinge, and EliteSingles."
+    },
+    {
+        "id": "https://mashable.com/article/dec-13-roborock-q10-s5-deal",
+        "title": "This Roborock Q10 S5+ made our list of the best robot vacuums for every budget and it\u2019s on sale right now",
+        "link": "https://mashable.com/article/dec-13-roborock-q10-s5-deal",
+        "published": "Sat, 13 Dec 2025 18:08:50 +0000",
+        "source": "Mashable",
+        "summary": "Roborock Q10 S5+ robot vacuum is on sale this weekend for 40% off."
+    },
+    {
+        "id": "https://pv-magazine-usa.com/2025/12/12/analysis-finds-anytime-electricity-from-solar-available-as-battery-costs-plummet/",
+        "title": "Analysis finds anytime electricity from solar available as battery costs plummet",
+        "link": "https://pv-magazine-usa.com/2025/12/12/analysis-finds-anytime-electricity-from-solar-available-as-battery-costs-plummet/",
+        "published": "Sat, 13 Dec 2025 17:32:21 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46256249\">Comments</a>"
     }
 ]
